# traderjoe

./: .env.example  .gitignore  Cargo.toml  HACKATHON_PITCH.md  README.md  TASKS.md  cleanup_ollama.sh  test_ollama.sh
.github/workflows/: auto_exit.yml  evening_routine.yml  morning_routine.yml
.sqlx/: query-08ce637fd0ed7f270870961e169ebff7d2dc93f448f3d58db3803b414ec377c7.json  query-0b46968cabbd40b3a87509479a1941ee91cc968bac7fe284e12b78e53f5bbc22.json  query-10bf0c56abbc992f33491e5dbafca468f5d8119e2535cc8518c3305df5a42d16.json  query-13b87a794a47022fa06b365eb1be7b0cbfb63fff5e09b218f43e18be34981dae.json  query-1511fe715e72572e77084f9a601d7014a63cb3aaf4d07fbac5e4b88f163c6914.json  query-18deaa4c627ff59dd09e921b19bd2f9e57ae1c28be608ceec4f5ccbbc07fa551.json  query-1a23a9add223e988d2dbba1e8d5df489396b945c4a5e8c2810d8ead1355a713d.json  query-202909dcf6ff6fc3f8d533a79c8888134c170461e462a7e28d624ee2275d405d.json  query-2049b356e3f2d8a1a87fe5bb27a62147aad53c6b57c710c55365c6939f1ae8f8.json  query-236f96463f5c7857844b4b60e4b4afd2aae7243191ce302c0ffc308c4780ec83.json  query-23f1489e5a0ec287f03f13e5efabd0b8f79ca865802c7c609c7cdcefb3e3dec5.json  query-288ed227f673d9e80d7a8b7f49199153d779781ed35a4193e3a92eeec4cfec1c.json  query-2a0d6a918991dba1b4b818694e26c8f744ea7dd4a99a65ad5b84502ca1d65d02.json  query-2fd1a6d74c8a2aaf3e676769a6fd608f5be945642c8f2a9e15cdc5563104ab33.json  query-3291c315e56a3bdc98414b147b69e5e4c775fac69e1e23b01f9d43341f5c8cf4.json  query-3506a2006fa1428c3272f7601ea338c4ba8e787c0e96874731a2cf686a5610c4.json  query-454877ad9dc76b2a67f8c769db808dcdba1c77b314a7bd01181762dd89c61b19.json  query-45a8aecf2f75294b031e4dd482aae727c90e86c0cd6c0bca6dcebe48fbf8a129.json  query-49907cbc8236ccbd3e34d3d79ba14cb8f1b3d1614470dd58d779944740e4836d.json  query-4bc7092234c0f66fc48bb2aaf9472e53f6b799f8461a0799145cc9048ee2de7e.json  query-538a4a642323e2efd90b5f6046d1df1257c13a627a13a6594954d5d4eb3c226d.json  query-5654ac300aa9250728e8928fc600c18d8d9c63fff048a38dd599cb83ab145180.json  query-56fd31d21940cbdfb1af08a13b6777b692c69cdc816a5ebd94b3cdc4feb7fe87.json  query-6943c76bc19a50779410a488c2820e5daa6d2234671e3ad82dfd7ce27bf1eceb.json  query-6c5491d33963244a71df0db54c2c6e0af9f147df635b040d683ccc077f013f55.json  query-779f82386deb04e417ee6715d20aa1848a6ddc8574529ba7a97f98db86d110c5.json  query-77f2acfdd72a709f156cf5e48dc15e88f8daa70a95cafb63448aa04bb2e90740.json  query-7ee81a07037e17b04cc9fdbc07b2050418d73b61d0a025b4f6797a9b3fabf6ac.json  query-8138892ca17c54f422e5bfa9edbbafd97156c5f364c52a9e337c2d4bdf4a3864.json  query-815dd6323f020f8cd94168dee50e48ef675e524b49d06d7de526dd35c1215a53.json  query-85704d3bdeda6ab25e4fb2673ef65297d86e9e39a85984cb2faff4fef24394ba.json  query-865c7f944ab7c5c3b7f0e942a4d08ed06ed4a707a1cb71b4600735b68c86e31e.json  query-885cc3b6efd47674c075d2170b74c67fd661d6c2dafd7e8b80d876946813be3a.json  query-8ab553af85d4053667433ba7e5b41ea4d0c16dac3b574ed2858112124a4637fe.json  query-8c53d0ebdc08503a69ad6364841fe5b1adbe2b15723673cc09e1070d5d328eab.json  query-8d4fe7e1746ae48cda2b417bf89934e6cbb389a319607d8cb862b0cddad25810.json  query-9aa8a49a2d0cc7528b224398af456c7046be9dff642a28d526656d51cb0478ea.json  query-9c0a9587a87575ac692bb502045892d1ec3168044019129577f008dd7a7d4170.json  query-9eddda1fbd8a0ca0b09c405428785e884d54be83145563dab4b7be84193743d9.json  query-b1ad31b6845316b19e9f0a3079652c9e8510aca6484fe0351b499f80551e7bbd.json  (+17 more)
docs/: LEVEL2_TASKS.md  PRD.md  TASKS.md  ace_framework.md
migrations/: 001_enable_pgvector.sql  001_init.sql  002_analysis_summaries.sql  002_base_tables.sql  003_trading_tables.sql  004_playbook.sql  005_paper_trades.sql  006_circuit_breaker_lock.sql  007_slippage_tracking.sql
ml_components/: hello.py  pyproject.toml
scripts/: auto_exit.sh  check_schedule.sh  check_services.sh  daily_summary.sh  embedding_service.py  evening_routine.sh  manage_cron.sh  monitor_playbook.sh  morning_routine.sh  setup_cron.sh  setup_env.sh  test_confidence_learning.sh  traderjoe  verify_phase1.sh  verify_phase2.sh
src/: db.rs  lib.rs  main.rs
src/ace/: context.rs  curator.rs  delta.rs  generator.rs  mod.rs  playbook.rs  prompts.rs  reflector.rs  sanitize.rs
src/cli/: commands.rs  migrate.rs  mod.rs
src/config/: mod.rs
src/data/: errors.rs  indicators.rs  market.rs  mod.rs  news.rs  research.rs  retry.rs  sentiment.rs
src/embeddings/: mod.rs
src/llm/: mod.rs
src/ml/: mod.rs
src/orchestrator/: backtest.rs  evening.rs  mod.rs  morning.rs  morning_broken.rs  performance.rs
src/system/: mod.rs
src/trading/: account.rs  auto_exit.rs  black_scholes.rs  calibration.rs  circuit_breaker.rs  execution.rs  mod.rs  paper.rs  position_sizing.rs  regime.rs  risk_manager.rs  signals.rs  slippage.rs
src/vector/: mod.rs  pgvector_sqlx.rs  reranker.rs
tests/: ace_integration.rs  circuit_breaker_concurrency.rs  confidence_bounds_test.rs  integration_test.rs  orchestration_integration.rs
