[package]
name = "traderjoe"
version = "0.1.0"
edition = "2021"
authors = ["jdhiman"]
description = "ACE-Enhanced Daily Trading System combining Agentic Context Engineering with traditional ML"
license = "MIT"
readme = "README.md"
keywords = ["trading", "ai", "machine-learning", "context-engineering"]
categories = ["finance", "ai", "data-analysis"]

[dependencies]
# Async Runtime
tokio = { version = "1.0", features = ["full"] }

tokio-retry = "0.3"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "migrate", "uuid", "chrono", "json"] }
postgres = "0.19"
uuid = { version = "1.0", features = ["v4", "serde"] }

# CLI Framework
clap = { version = "4.0", features = ["derive", "env"] }
colored = "2.0"

# HTTP Client & APIs
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
url = "2.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# LLM Integration
ollama-rs = "0.1"
# openai-api-rs = "5.0"  # TODO: Add when available
# anthropic = "0.1"  # TODO: Add when available

# ML Models (Local) - Use newer versions
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
hf-hub = "0.4"
tokenizers = "0.22"

# Python Interop - optional
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"
eyre = "0.6"

# Configuration
dotenv = "0.15"
config = "0.13"

# Numerical Computing - TODO: Add when needed
# ndarray = "0.15"
# linfa = "0.7"

# Statistics & Math
statrs = "0.16"
rand = "0.8"
rand_distr = "0.4"

# Utilities
futures = "0.3"
once_cell = "1.19"
lazy_static = "1.4"
dashmap = "5.5"
parking_lot = "0.12"
rayon = "1.8"

# Development Dependencies
[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
serial_test = "3.0"
insta = "1.34"
proptest = "1.4"

# Build & Performance
[lib]
name = "traderjoe"
path = "src/lib.rs"

[[bin]]
name = "traderjoe"
path = "src/main.rs"

[features]
default = []
ml = ["pyo3"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
