[package]
name = "traderjoe"
version = "0.1.0"
edition = "2021"
authors = ["jdhiman"]
description = "ACE-Enhanced Daily Trading System combining Agentic Context Engineering with traditional ML"
license = "MIT"
readme = "README.md"
keywords = ["trading", "ai", "machine-learning", "context-engineering"]
categories = ["finance", "ai", "data-analysis"]

[dependencies]
# Async Runtime
tokio = { version = "1.0", features = ["full"] }
tokio-retry = "0.3"

# Database
# Using Neon (neon.tech) for PostgreSQL
# - Excellent sqlx compatibility (built in Rust)
# - Works great with GitHub Actions (no IPv4/SASL issues)
# - Generous free tier for serverless workflows
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "migrate", "uuid", "chrono", "json", "bigdecimal"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
bigdecimal = "0.3"

# CLI Framework
clap = { version = "4.0", features = ["derive", "env"] }
colored = "2.0"

# HTTP Client & APIs
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
url = "2.4"
urlencoding = "2.1"  # URL encoding for API queries

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
dotenv = "0.15"
config = "0.13"

# Numerical Computing - TODO: Add when needed
# ndarray = "0.15"
# linfa = "0.7"

# Statistics & Math
rand = "0.8"

# Utilities
futures = "0.3"
lazy_static = "1.4"
regex = "1.10"
sysinfo = "0.30"
async-openai = { version = "0.30.1", features = ["rustls"] }

# Development Dependencies
[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
serial_test = "3.0"
insta = "1.34"
proptest = "1.4"

# Build & Performance
[lib]
name = "traderjoe"
path = "src/lib.rs"

[[bin]]
name = "traderjoe"
path = "src/main.rs"

[features]
default = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
