[project]
name = "traderjoe-ml"
version = "0.1.0"
description = "Machine learning components for TraderJoe"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "vectorbt>=0.25.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ipykernel>=6.0.0",
]
